# findruction2

./: Cargo.toml  README.md
src/: arch.rs  main.rs  tui.rs
