[package]
name = "findruction2"
version = "0.2.0"
edition = "2021"

[dependencies.hexpatch-keystone]
version = "0.9.4"

[dependencies.capstone]
version = "0.13.0"

[dependencies.goblin]
version = "0.9.3"

[dependencies.clap]
version = "4.5.37"
features = ["derive"]

[dependencies.ratatui]
version = "0.30"

[dependencies.crossterm]
version = "0.29"

[profile.release]
lto = "thin"
codegen-units = 1
